# hexa-crm

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  docker-compose.central.yml  package-lock.json  package.json  svelte.config.js  vite.config.js
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.grok/continuous-improvement/: BACKLOG.md  CYCLE_LOG.md  DECISIONS.md  EXPERIMENTS.md  FEATURE_AUDIT.md  MARKET_EVIDENCE.md  PRODUCT_MAP.md  (+1 more)
docs/: ADR-001-verifactu-plan.md  AI_TOOLS.md  BACKUP.md  BRANCH_PROTECTION.md  CENTRAL_DEPLOYMENT.md  DESIGN_SYSTEM.md  INTEGRATION_MEIGA.md  INVENTORY_SUPPLY_CHAIN.md  MARKET.md  MASTER_PROFILE.md  MULTI_COMPANY_ANALYSIS.md  OVERNIGHT_CHECKLIST.md  PERFORMANCE.md  PLUGINS.md  PLUGIN_HOST_CONTRACT.md  PRODUCT_STRATEGY_RETAIL_OS.md  RELEASES.md  SEMANTIC_SEARCH.md  TAURI_PARITY.md  UPDATE_FROM_GITHUB.md  VERIFACTU_MATRIX.md  openapi-v1.yaml
scripts/: deploy-incus-web.sh  install-git-hooks.sh  provision-central-api-role.mjs  provision-central-operator.mjs  provision-central-tenant.mjs  verify-central-backup-restore.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: ai.rs  auth.rs  cash.rs  customers.rs  mod.rs  products.rs  reports.rs  sales.rs  settings.rs
tools/: README.md
(+200 files in other folders)
